--- a/GLproj/GLproj.vcxproj.filters
+++ b/GLproj/GLproj.vcxproj.filters
@@ -21,12 +21,18 @@
     <ClCompile Include="GLShader.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="GLobject.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="OBJ_Loader.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
     <ClInclude Include="GLShader.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="GLobject.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
